All stretch goals complete.  Debugged issues related to custom hooks.  All tests pass.  All components and conditionals rendering properly.

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,25 @@ input[type="submit"] {
   letter-spacing: 10px;
 }
 
+/* MY button */
+
+
+.clear-form-button {
+  background: #ec5990;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 40px;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 10px;
+  position: -50px;
+}
+
+
+
+
 button[type="submit"]:hover,
 input[type="submit"]:hover {
   background: #bf1650;
